syntax = "proto3";
import "google/protobuf/timestamp.proto";

package empty.user.v1;

service User {
    rpc Register (RegisterRequest) returns (RegisterResponse) { }
    rpc Login (LoginRequest) returns (LoginResponse) { }
    rpc Refresh (RefreshRequest) returns (RefreshResponse) { }
    rpc Logout (LogoutRequest) returns (LogoutResponse) { }
    rpc Info (InfoRequest) returns (InfoResponse) { }
    rpc Verify (VerifyRequest) returns (VerifyResponse) { }
}


message Info {
    string id = 1;
    string mobile = 2;
    string username = 3;
    string avatar = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
message Token {
    string access_token = 1;
    int32 expires_in = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}


message RegisterRequest {
    string mobile = 1;
    string password = 2;
}
message RegisterResponse{
    Token token = 1;
}
message LoginRequest {
    string mobile = 1;
    string password = 2;
}
message LoginResponse{
    Token token = 1;
}
message RefreshRequest {
    string refresh_token = 1;
}
message RefreshResponse{
    Token token = 1;
}
message LogoutRequest {
    string access_token = 1;
}
message LogoutResponse{
    
}
message InfoRequest {
    string access_token = 1;
}
message InfoResponse{
    Info info = 1;
}

message VerifyRequest {
    string access_token = 1;
    string resource = 2;
}
message VerifyResponse{
    string id = 1;
}

