syntax = "proto3";

package wx;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "wx.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "yyuck.com";
};

service WxService {
  rpc SnsJscode2session(SnsJscode2sessionRequest) returns (SnsJscode2sessionResponse) {}
}

message SnsJscode2sessionRequest {
  string appid = 1; // 小程序 appId
  string secret = 2; // 小程序 appSecret
  string js_code = 3; // 登录时获取的 code，可通过[wx.login](https://developers.weixin.qq.com/miniprogram/dev/api/open-api/login/wx.login.html)获取
  string grant_type = 4; // 授权类型，此处只需填写 authorization_code
}
message SnsJscode2sessionResponse {
 string session_key = 1; // 会话密钥
 // 用户在开放平台的唯一标识符，若当前小程序已绑定到微信开放平台帐号下会返回，详见
 // [UnionID 机制说明](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/union-id.html)。
 optional string unionid = 2;
 string openid = 3;  // 用户唯一标识
}

message Error {
  int32 errcode = 1;
  string errmsg = 2;
}